--- a/DigitalFinanceReactApp.Server/appsettings.json
+++ b/DigitalFinanceReactApp.Server/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=digital_finance;Username=postgres;Password=root"
+  }
 }
