--- a/DigitalFinanceReactApp.Server/DigitalFinanceReactApp.Server.csproj
+++ b/DigitalFinanceReactApp.Server/DigitalFinanceReactApp.Server.csproj
@@ -10,9 +10,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.1.35" />
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy">
       <Version>6.*-*</Version>
     </PackageReference>
+    <PackageReference Include="Npgsql" Version="8.0.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
@@ -25,7 +27,6 @@
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="Controllers\" />
-    <Folder Include="Databases\" />
     <Folder Include="Librarys\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
