Промежуточный результат создания UsersControllerЭ

--- a/DigitalFinanceReactApp.Server/appsettings.json
+++ b/DigitalFinanceReactApp.Server/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=digital_finance;Username=postgres;Password=root"
+    "DefaultConnection": "Host=localhost;Database=digitalfinance;Username=postgres;Password="
   }
 }
