--- a/DigitalFinanceReactApp.Server/appsettings.json
+++ b/DigitalFinanceReactApp.Server/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=digitalfinance;Username=postgres;Password="
+    "DefaultConnection": "Server=192.168.0.160;Database=digitialfinance;User Id=postgres;Port=5432;Password="
   }
 }
