--- a/DigitalFinanceReactApp.Server/appsettings.json
+++ b/DigitalFinanceReactApp.Server/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=192.168.0.160;Database=digitialfinance;User Id=postgres;Port=5432;Password="
+    "DefaultConnection": "Server=localhost;Database=digitialfinance;User Id=postgres;Port=5432;Password=root"
   }
 }
