--- a/DigitalFinanceReactApp.Server/DigitalFinanceReactApp.Server.csproj
+++ b/DigitalFinanceReactApp.Server/DigitalFinanceReactApp.Server.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.35" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.33" />
     <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy">
       <Version>6.*-*</Version>
@@ -26,7 +27,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Librarys\" />
     <Folder Include="wwwroot\" />
     <Folder Include="Querys\" />
   </ItemGroup>
