Теперь счёт создаёся с фронта!!!!!!!

--- a/DigitalFinanceReactApp.Server/appsettings.json
+++ b/DigitalFinanceReactApp.Server/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=digitialfinance;User Id=postgres;Port=5432;Password=root"
+    "DefaultConnection": "Server=localhost;Database=digitalfinance;User Id=postgres;Port=5432;Password=root"
   }
 }
